# LiveStatus

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
backend/: Cargo.toml
backend/src/: device_manager.rs  main.rs
client/: Cargo.toml
client-android/: settings.gradle.kts
client-android/app/: build.gradle.kts
client-android/app/src/androidTest/java/me/qwqdev/livestatus/: ExampleInstrumentedTest.java
client-android/app/src/main/: AndroidManifest.xml
client-android/app/src/main/java/me/qwqdev/livestatus/: MainActivity.java
client-android/app/src/main/java/me/qwqdev/livestatus/model/: Status.java
client-android/app/src/main/java/me/qwqdev/livestatus/receiver/: BootReceiver.java
client-android/app/src/main/res/layout/: activity_main.xml
client-android/app/src/main/res/values/: strings.xml  themes.xml
client-android/app/src/main/res/xml/: accessibility_service_config.xml
client-android/app/src/test/java/me/qwqdev/livestatus/: ExampleUnitTest.java
client-android/gradle/: libs.versions.toml
client-android/gradle/wrapper/: gradle-wrapper.properties
client/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FadeText.tsx
frontend/src/contexts/: LanguageContext.tsx
share/: Cargo.toml
share/src/: lib.rs  settings.rs  settings_handler.rs  status.rs
share/src/config/: settings.rs  settings_handler.rs
share/src/filter/: filter_manager.rs  filter_rule.rs  mod.rs
share/src/log/: log_manager.rs
(+4 files in other folders)
