[workspace]
members = [
    "client", "backend", "share",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
once_cell = "1.21.3"
flexi_logger = "0.31.7"
log = "0.4.28"
